parse builders.json

--- a/master.cfg
+++ b/master.cfg
@@ -4,33 +4,42 @@
 from buildbot.plugins import *
 import subprocess, re, json
 
-f = open('workers.json', 'r')
-workers_json = f.read ()
-workers = json.loads(workers_json)
-print workers
+c = BuildmasterConfig = {}
 
 flathub_github_uri = 'git://github.com/alexlarsson/flathub.git'
 flathub_upstream_repo = 'file:///vcs/gnome/flathub/repo'
 flathub_upstream_repo_path = '/vcs/gnome/flathub/repo'
 flathub_branch = 'stable'
-flathub_arches = ["x86_64", "i386"]
-flathub_arch_workers = {
-    "x86_64": ['flathub-worker'],
-    "i386":  ['flathub-worker']
-}
-flathub_checkin_workers = ['flathub-worker']
-flathub_update_worker = 'flathub-worker'
 
-# This is the dictionary that the buildmaster pays attention to. We also use
-# a shorter alias to save typing.
-c = BuildmasterConfig = {}
+flathub_arches = []
+flathub_arch_workers = {}
+flathub_checkin_workers = ['worker1']
+flathub_update_worker = 'worker1'
 
 ####### WORKERS
+
+f = open('builders.json', 'r')
+worker_config = json.loads(f.read ())
 
 # The 'workers' list defines the set of recognized workers. Each element is
 # a Worker object, specifying a unique worker name and password.  The same
 # worker name and password must be configured on the worker.
-c['workers'] = [worker.Worker("flathub-worker", "pass")]
+c['workers'] = []
+
+for w in worker_config.iterkeys():
+    config = worker_config[w]
+    w = w.encode('ascii', 'ignore')
+    passwd = config[u'password'].encode('ascii', 'ignore')
+    print config
+    print w
+    print passwd
+    c['workers'].append (worker.Worker(w, passwd))
+    for a in config[u'arches']:
+        a = a.encode('ascii', 'ignore')
+        if not a in flathub_arches:
+            flathub_arches.append(a)
+            flathub_arch_workers[a] = []
+        flathub_arch_workers[a].append(w)
 
 # 'protocols' contains information about protocols which master will use for
 # communicating with workers. You must define at least 'port' option that workers
