more config files

--- a/master.cfg
+++ b/master.cfg
@@ -6,15 +6,18 @@ import subprocess, re, json
 
 c = BuildmasterConfig = {}
 
-flathub_github_uri = 'git://github.com/alexlarsson/flathub.git'
-flathub_upstream_repo = 'file:///vcs/gnome/flathub/repo'
-flathub_upstream_repo_path = '/vcs/gnome/flathub/repo'
-flathub_branch = 'stable'
+f = open('config.json', 'r')
+config = json.loads(f.read ())
+
+flathub_github_uri = config[u'github-uri'].encode('ascii', 'ignore')
+flathub_upstream_repo = config[u'flathub-repo'].encode('ascii', 'ignore')
+flathub_upstream_repo_path = config[u'flathub-repo-path'].encode('ascii', 'ignore')
+flathub_branch = config[u'flathub-branch'].encode('ascii', 'ignore')
 
 flathub_arches = []
 flathub_arch_workers = {}
-flathub_checkin_workers = ['worker1']
-flathub_update_worker = 'worker1'
+flathub_checkin_workers = []
+flathub_update_workers = []
 
 ####### WORKERS
 
@@ -27,25 +30,29 @@ worker_config = json.loads(f.read ())
 c['workers'] = []
 
 for w in worker_config.iterkeys():
-    config = worker_config[w]
+    wc = worker_config[w]
     w = w.encode('ascii', 'ignore')
-    passwd = config[u'password'].encode('ascii', 'ignore')
-    print config
-    print w
-    print passwd
+    passwd = wc[u'password'].encode('ascii', 'ignore')
     c['workers'].append (worker.Worker(w, passwd))
-    for a in config[u'arches']:
+    for a in wc[u'arches']:
         a = a.encode('ascii', 'ignore')
         if not a in flathub_arches:
             flathub_arches.append(a)
             flathub_arch_workers[a] = []
         flathub_arch_workers[a].append(w)
+    print "wc"
+    print wc
+    print "has_key"
+    print wc.has_key(u'checkin')
+    if wc.has_key(u'checkin'):
+        flathub_checkin_workers.append(w)
+    if wc.has_key(u'update-repo'):
+        flathub_update_workers.append(w)
 
-# 'protocols' contains information about protocols which master will use for
-# communicating with workers. You must define at least 'port' option that workers
-# could connect to your master with this protocol.
-# 'port' must match the value configured into the workers (with their
-# --master option)
+print "flathub_update_workers"
+print flathub_update_workers
+
+# TODO: Remove when not debugging
 c['protocols'] = {'pb': {'port': 9989}}
 
 ####### CHANGESOURCES
@@ -215,7 +222,7 @@ for arch in flathub_arches:
                            factory=build_factory))
 c['builders'].append(
     util.BuilderConfig(name='update-repo',
-                       workernames=[flathub_update_worker],
+                       workernames=flathub_update_workers,
                        factory=update_repo_factory))
 c['builders'].append(
     util.BuilderConfig(name='checkin',
