Only collapse build requests for checkin builder

--- a/master.cfg
+++ b/master.cfg
@@ -65,6 +65,8 @@ c['change_source'].append(changes.GitPoller(
     flathub_github_uri,
     workdir='gitpoller-workdir', branches=True,
     pollinterval=300))
+
+# TODO: Remove when not debugging
 from buildbot.changes import pb
 c['change_source'].append(pb.PBChangeSource(port=9999, user='change', passwd='test'))
 
@@ -103,6 +105,7 @@ force = schedulers.ForceScheduler(
 )
 
 c['schedulers'] = [checkin, build, update_repo, force]
+c['collapseRequests'] = False
 
 ####### BUILDERS
 
@@ -226,6 +229,7 @@ c['builders'].append(
                        factory=update_repo_factory))
 c['builders'].append(
     util.BuilderConfig(name='checkin',
+                       collapseRequests=True,
                        workernames=flathub_checkin_workers,
                        factory=checkin_factory))
 
