--- a/master.cfg
+++ b/master.cfg
@@ -1,7 +1,10 @@
 # -*- python -*-
 # ex: set filetype=python:
 
+from buildbot.process.build import Build
 from buildbot.plugins import *
+from buildbot import locks
+from twisted.python import log
 import subprocess, re, json
 
 c = BuildmasterConfig = {}
@@ -40,17 +43,10 @@ for w in worker_config.iterkeys():
             flathub_arches.append(a)
             flathub_arch_workers[a] = []
         flathub_arch_workers[a].append(w)
-    print "wc"
-    print wc
-    print "has_key"
-    print wc.has_key(u'checkin')
     if wc.has_key(u'checkin'):
         flathub_checkin_workers.append(w)
     if wc.has_key(u'update-repo'):
         flathub_update_workers.append(w)
-
-print "flathub_update_workers"
-print flathub_update_workers
 
 # TODO: Remove when not debugging
 c['protocols'] = {'pb': {'port': 9989}}
@@ -106,6 +102,29 @@ force = schedulers.ForceScheduler(
 
 c['schedulers'] = [checkin, build, update_repo, force]
 c['collapseRequests'] = False
+
+####### Custom builders
+
+# This is a build class that automatically takes a per-branch lock
+# which means only one build of a branch can be outstanding at a time
+class BranchLockBuild(Build):
+    _masterLocks = {}
+
+    @staticmethod
+    def find_or_create_master_lock_for_branch(branch):
+        lock = BranchLockBuild._masterLocks.get(branch)
+        if lock is None:
+            log.msg("********* Created lock for branch %s" % branch)
+            lock = locks.MasterLock(branch + ' branch')
+            BranchLockBuild._masterLocks[branch] = lock
+        return lock
+
+    def startBuild(self, build_status, workerforbuilder):
+        if self.sources and len(self.sources) == 1:
+            branch = self.sources[0].branch
+            lock = BranchLockBuild.find_or_create_master_lock_for_branch(branch)
+            self.setLocks([lock.access('exclusive')])
+        return Build.startBuild(self, build_status, workerforbuilder)
 
 ####### BUILDERS
 
@@ -201,6 +220,7 @@ update_repo_factory.addStep(steps.ShellCommand(name='update the repo',
                                                locks=[repo_lock.access('exclusive')]))
 
 checkin_factory = util.BuildFactory()
+checkin_factory.buildClass = BranchLockBuild
 checkin_factory.addStep(steps.MasterShellCommand(name="Clean up storage on master",
                                                  haltOnFailure=True,
                                                  command=['rm', '-rf', util.Interpolate('builds/%(prop:branch)s-%(prop:revision)s')]))
