Install update build dependencies

--- a/master.cfg
+++ b/master.cfg
@@ -155,6 +155,29 @@ build_factory.addStep(steps.ShellCommand(name='pull current revision into parent
                                                   util.Interpolate('app/%(prop:branch)s/%(prop:arch)s/' + flathub_branch),
                                                   util.Interpolate('runtime/%(prop:branch)s.Debug/%(prop:arch)s/' + flathub_branch),
                                                   util.Interpolate('runtime/%(prop:branch)s.Locale/%(prop:arch)s/' + flathub_branch)]))
+build_factory.addStep(steps.ShellCommand(name='adding flathub remote',
+                                         haltOnFailure=True,
+                                         command=['flatpak', '--user', 'remote-add', '--if-not-exists', '--no-gpg-verify', 'flathub', flathub_upstream_repo]))
+build_factory.addStep(steps.ShellCommand(name='updating dependencies',
+                                         haltOnFailure=True,
+                                         command=['python', '-c',
+"""
+import sys, json, re, subprocess
+j = json.loads(re.sub( r'/\*.*?\*/', '', open(sys.argv[1], 'r').read()))
+runtime = j['runtime']
+sdk = j['sdk']
+version = j['runtime-version']
+arch = sys.argv[2]
+platform_ref = '%s/%s/%s' % (runtime, arch, version)
+sdk_ref = '%s/%s/%s' % (sdk, arch, version)
+deps = [platform_ref, sdk_ref]
+for ref in deps:
+  if subprocess.call(['flatpak', 'install', '--user', 'flathub', ref]) != 0:
+    if subprocess.call(['flatpak', 'update', '--user', ref]):
+      sys.exit(1)
+""",
+                                                  util.Interpolate('%(prop:branch)s.json'),
+                                                  util.Property('arch')]))
 build_factory.addStep(steps.ShellCommand(name='build manifest',
                                          haltOnFailure=True,
                                          command=['flatpak-builder', '--force-clean', '--sandbox',
