--- a/master.cfg
+++ b/master.cfg
@@ -16,6 +16,8 @@ flathub_github_uri = config[u'github-uri'].encode('ascii', 'ignore')
 flathub_upstream_repo = config[u'flathub-repo'].encode('ascii', 'ignore')
 flathub_upstream_repo_path = config[u'flathub-repo-path'].encode('ascii', 'ignore')
 flathub_branch = config[u'flathub-branch'].encode('ascii', 'ignore')
+flathub_gpg_homedir = config[u'flathub-gpg-homedir'].encode('ascii', 'ignore')
+flathub_gpg_key = config[u'flathub-gpg-key'].encode('ascii', 'ignore')
 
 flathub_arches = []
 flathub_arch_workers = {}
@@ -139,12 +141,15 @@ build_factory.workdir = util.Interpolate('build-%(prop:branch)s')
 build_factory.addStep(steps.Git(name="checkout manifest",
                                 repourl=flathub_github_uri,
                                 mode='incremental', branch=util.Property('branch')))
+build_factory.addStep(steps.FileDownload(name='downloading public key',
+                                         mastersrc="flathub.gpg",
+                                         workerdest="flathub.gpg"))
 build_factory.addStep(steps.ShellSequence(name='initializing repos',
                                           haltOnFailure=True,
                                           commands=[
                                               util.ShellArg(command=['rm', '-rf', 'parent-repo', 'repo', 'repo.tar']),
                                               util.ShellArg(command=['ostree', '--repo=parent-repo', '--mode=archive-z2', 'init']),
-                                              util.ShellArg(command=['ostree', '--repo=parent-repo', 'remote', 'add', '--no-gpg-verify', 'upstream', flathub_upstream_repo]),
+                                              util.ShellArg(command=['ostree', '--repo=parent-repo', 'remote', 'add', '--gpg-import=flathub.gpg', 'upstream', flathub_upstream_repo]),
                                               util.ShellArg(command=['ostree', '--repo=repo', '--mode=archive-z2', 'init'])
                                           ]))
 build_factory.addStep(steps.ShellCommand(name='set core.parent',
@@ -155,9 +160,12 @@ build_factory.addStep(steps.ShellCommand(name='pull current revision into parent
                                                   util.Interpolate('app/%(prop:branch)s/%(prop:arch)s/' + flathub_branch),
                                                   util.Interpolate('runtime/%(prop:branch)s.Debug/%(prop:arch)s/' + flathub_branch),
                                                   util.Interpolate('runtime/%(prop:branch)s.Locale/%(prop:arch)s/' + flathub_branch)]))
+build_factory.addStep(steps.FileDownload(name='downloading public key',
+                                         mastersrc="flathub.gpg",
+                                         workerdest="flathub.gpg"))
 build_factory.addStep(steps.ShellCommand(name='adding flathub remote',
                                          haltOnFailure=True,
-                                         command=['flatpak', '--user', 'remote-add', '--if-not-exists', '--no-gpg-verify', 'flathub', flathub_upstream_repo]))
+                                         command=['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg', 'flathub', flathub_upstream_repo]))
 build_factory.addStep(steps.ShellCommand(name='updating dependencies',
                                          haltOnFailure=True,
                                          command=['python', '-c',
@@ -217,6 +225,10 @@ update_repo_factory.addStep(steps.MasterShellCommand(name='remove build results 
                                                      command=['rm', '-rf', util.Interpolate('builds/%(prop:branch)s-%(prop:revision)s')],
                                                      alwaysRun=True))
 update_repo_factory.addStep(steps.ShellCommand(name='fsck results', command=['ostree', '--repo=repo', 'fsck']))
+update_repo_factory.addStep(steps.ShellCommand(name='sign commits', command=['flatpak', 'build-sign',
+                                                                             '--gpg-sign=' + flathub_gpg_key,
+                                                                             '--gpg-homedir=' + flathub_gpg_homedir,
+                                                                             'repo']))
 update_repo_factory.addStep(steps.ShellCommand(name='rsync objects and deltas',
                                                command=['rsync', '-rlptv', '--ignore-existing',
                                                         '--include=/objects',
@@ -239,7 +251,11 @@ update_repo_factory.addStep(steps.ShellCommand(name='rsync refs',
                                                         'repo/', flathub_upstream_repo_path + '/'],
                                                locks=[repo_lock.access('exclusive')]))
 update_repo_factory.addStep(steps.ShellCommand(name='update the repo',
-                                               command=['flatpak', 'build-update-repo', '--generate-static-deltas', '/vcs/gnome/flathub/repo'],
+                                               command=['flatpak', 'build-update-repo',
+                                                        '--generate-static-deltas',
+                                                        '--gpg-sign=' + flathub_gpg_key,
+                                                        '--gpg-homedir=' + flathub_gpg_homedir,
+                                                        '/vcs/gnome/flathub/repo'],
                                                locks=[repo_lock.access('exclusive')]))
 
 checkin_factory = util.BuildFactory()
