Make gpg args optional

--- a/master.cfg
+++ b/master.cfg
@@ -16,18 +16,32 @@ flathub_github_uri = config[u'github-uri'].encode('ascii', 'ignore')
 flathub_upstream_repo = config[u'flathub-repo'].encode('ascii', 'ignore')
 flathub_upstream_repo_path = config[u'flathub-repo-path'].encode('ascii', 'ignore')
 flathub_branch = config[u'flathub-branch'].encode('ascii', 'ignore')
-flathub_gpg_homedir = config[u'flathub-gpg-homedir'].encode('ascii', 'ignore')
-flathub_gpg_key = config[u'flathub-gpg-key'].encode('ascii', 'ignore')
+
+flathub_gpg_homedir = ""
+if config.has_key(u'flathub-gpg-homedir'):
+    flathub_gpg_homedir = config[u'flathub-gpg-homedir'].encode('ascii', 'ignore')
+
+flathub_gpg_key = ""
+if config.has_key(u'flathub-gpg-key'):
+    flathub_gpg_key = config[u'flathub-gpg-key'].encode('ascii', 'ignore')
+
+f = open('builders.json', 'r')
+worker_config = json.loads(f.read ())
+
+####### SETUP
 
 flathub_arches = []
 flathub_arch_workers = {}
 flathub_checkin_workers = []
 flathub_update_workers = []
 
-####### WORKERS
+gpg_args = []
+if flathub_gpg_key:
+    gpg_args.append ('--gpg-sign=' + flathub_gpg_key)
+if flathub_gpg_homedir:
+    gpg_args.append ('--gpg-homedir=' + flathub_gpg_homedir)
 
-f = open('builders.json', 'r')
-worker_config = json.loads(f.read ())
+####### WORKERS
 
 # The 'workers' list defines the set of recognized workers. Each element is
 # a Worker object, specifying a unique worker name and password.  The same
@@ -225,10 +239,8 @@ update_repo_factory.addStep(steps.MasterShellCommand(name='remove build results 
                                                      command=['rm', '-rf', util.Interpolate('builds/%(prop:branch)s-%(prop:revision)s')],
                                                      alwaysRun=True))
 update_repo_factory.addStep(steps.ShellCommand(name='fsck results', command=['ostree', '--repo=repo', 'fsck']))
-update_repo_factory.addStep(steps.ShellCommand(name='sign commits', command=['flatpak', 'build-sign',
-                                                                             '--gpg-sign=' + flathub_gpg_key,
-                                                                             '--gpg-homedir=' + flathub_gpg_homedir,
-                                                                             'repo']))
+update_repo_factory.addStep(steps.ShellCommand(name='sign commits',
+                                               command=['flatpak', 'build-sign'] + gpg_args +  ['repo']))
 update_repo_factory.addStep(steps.ShellCommand(name='rsync objects and deltas',
                                                command=['rsync', '-rlptv', '--ignore-existing',
                                                         '--include=/objects',
@@ -251,11 +263,7 @@ update_repo_factory.addStep(steps.ShellCommand(name='rsync refs',
                                                         'repo/', flathub_upstream_repo_path + '/'],
                                                locks=[repo_lock.access('exclusive')]))
 update_repo_factory.addStep(steps.ShellCommand(name='update the repo',
-                                               command=['flatpak', 'build-update-repo',
-                                                        '--generate-static-deltas',
-                                                        '--gpg-sign=' + flathub_gpg_key,
-                                                        '--gpg-homedir=' + flathub_gpg_homedir,
-                                                        '/vcs/gnome/flathub/repo'],
+                                               command=['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + ['/vcs/gnome/flathub/repo'],
                                                locks=[repo_lock.access('exclusive')]))
 
 checkin_factory = util.BuildFactory()
