Initial test auth setup

--- a/master.cfg
+++ b/master.cfg
@@ -5,9 +5,9 @@ from buildbot.process.build import Build
 from buildbot.plugins import *
 from buildbot import locks
 from twisted.python import log
+import buildbot
 import subprocess, re, json
 
-c = BuildmasterConfig = {}
 
 f = open('config.json', 'r')
 config = json.loads(f.read ())
@@ -27,6 +27,35 @@ if config.has_key(u'flathub-gpg-key'):
 
 f = open('builders.json', 'r')
 worker_config = json.loads(f.read ())
+
+###### Init
+
+c = BuildmasterConfig = {}
+c['change_source'] = []
+c['protocols'] = {}
+
+####### Authentication
+
+# TODO: Switch to github auth
+auth = util.UserPasswordAuth({"flathub@flatpak.org": "test"})
+authz = util.Authz(
+    allowRules=[
+        util.RebuildBuildEndpointMatcher(role="admins", defaultDeny=True),
+        util.StopBuildEndpointMatcher(role="admins", defaultDeny=True),
+        util.ForceBuildEndpointMatcher(role="admins", defaultDeny=True),
+        util.EnableSchedulerEndpointMatcher(role="admins", defaultDeny=True)
+    ],
+    roleMatchers=[
+        util.RolesFromEmails(admins=["flathub@flatpak.org"]),
+    ]
+)
+
+###### Debug stuff
+
+# TODO: Remove when not debugging
+c['protocols']['pb'] = {'port': 9989}
+from buildbot.changes import pb
+c['change_source'].append(pb.PBChangeSource(port=9999, user='change', passwd='test'))
 
 ####### SETUP
 
@@ -64,23 +93,17 @@ for w in worker_config.iterkeys():
     if wc.has_key(u'update-repo'):
         flathub_update_workers.append(w)
 
-# TODO: Remove when not debugging
-c['protocols'] = {'pb': {'port': 9989}}
 
 ####### CHANGESOURCES
 
 # the 'change_source' setting tells the buildmaster how it should find out
 # about source code changes.  Here we point to the buildbot clone of pyflakes.
 
-c['change_source'] = []
 c['change_source'].append(changes.GitPoller(
     flathub_github_uri,
     workdir='gitpoller-workdir', branches=True,
     pollinterval=300))
 
-# TODO: Remove when not debugging
-from buildbot.changes import pb
-c['change_source'].append(pb.PBChangeSource(port=9999, user='change', passwd='test'))
 
 
 ####### SCHEDULERS
@@ -323,9 +346,10 @@ c['titleURL'] = 'https://github.com/flatpak/flathub'
 
 c['buildbotURL'] = "http://localhost:8010/"
 
-# minimalistic config to activate new web UI
 c['www'] = dict(port=8010,
-                plugins=dict(waterfall_view={}, console_view={}))
+                plugins=dict(waterfall_view={}, console_view={}),
+                auth=auth,
+                authz=authz)
 
 ####### DB URL
 
