--- a/master.cfg
+++ b/master.cfg
@@ -13,6 +13,7 @@ f = open('config.json', 'r')
 config = json.loads(f.read ())
 
 flathub_github_uri = config[u'github-uri'].encode('ascii', 'ignore')
+flathub_buildbot_uri = config[u'buildbot-uri'].encode('ascii', 'ignore')
 flathub_upstream_repo = config[u'flathub-repo'].encode('ascii', 'ignore')
 flathub_upstream_repo_path = config[u'flathub-repo-path'].encode('ascii', 'ignore')
 flathub_branch = config[u'flathub-branch'].encode('ascii', 'ignore')
@@ -344,7 +345,7 @@ c['titleURL'] = 'https://github.com/flatpak/flathub'
 # the 'www' entry below, but with an externally-visible host name which the
 # buildbot cannot figure out without some help.
 
-c['buildbotURL'] = "http://localhost:8010/"
+c['buildbotURL'] = flathub_buildbot_uri
 
 c['www'] = dict(port=8010,
                 plugins=dict(waterfall_view={}, console_view={}),
