Don't require arches in config

--- a/master.cfg
+++ b/master.cfg
@@ -83,12 +83,13 @@ for w in worker_config.iterkeys():
     w = w.encode('ascii', 'ignore')
     passwd = wc[u'password'].encode('ascii', 'ignore')
     c['workers'].append (worker.Worker(w, passwd))
-    for a in wc[u'arches']:
-        a = a.encode('ascii', 'ignore')
-        if not a in flathub_arches:
-            flathub_arches.append(a)
-            flathub_arch_workers[a] = []
-        flathub_arch_workers[a].append(w)
+    if wc.has_key(u'arches'):
+        for a in wc[u'arches']:
+            a = a.encode('ascii', 'ignore')
+            if not a in flathub_arches:
+                flathub_arches.append(a)
+                flathub_arch_workers[a] = []
+                flathub_arch_workers[a].append(w)
     if wc.has_key(u'checkin'):
         flathub_checkin_workers.append(w)
     if wc.has_key(u'update-repo'):
