rhel has no sync -f

--- a/master.cfg
+++ b/master.cfg
@@ -275,7 +275,7 @@ update_repo_factory.addStep(steps.ShellCommand(name='rsync objects and deltas',
                                                         '--exclude=*',
                                                         'repo/', flathub_upstream_repo_path + '/']))
 update_repo_factory.addStep(steps.ShellCommand(name='syncfs',
-                                               command=['sync', '-f', flathub_upstream_repo_path]))
+                                               command=['sync']))
 update_repo_factory.addStep(steps.ShellCommand(name='rsync refs',
                                                command=['rsync', '-rlptv',
                                                         '--include=/refs',
