Add a per-worked lock for updating dependencies

--- a/master.cfg
+++ b/master.cfg
@@ -169,6 +169,7 @@ class BranchLockBuild(Build):
 
 ####### BUILDERS
 
+flatpak_update_lock = util.WorkerLock("flatpak-update")
 repo_lock = util.MasterLock("repo")
 
 # The 'builders' list defines the Builders, which tell Buildbot how to perform a build:
@@ -207,6 +208,7 @@ build_factory.addStep(steps.ShellCommand(name='adding flathub remote',
                                          command=['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg', 'flathub', flathub_upstream_repo]))
 build_factory.addStep(steps.ShellCommand(name='updating dependencies',
                                          haltOnFailure=True,
+                                         locks=[flatpak_update_lock.access('exclusive')],
                                          command=['python', '-c',
 """
 import sys, json, re, subprocess
