Don't rsync permissions

--- a/master.cfg
+++ b/master.cfg
@@ -269,7 +269,7 @@ update_repo_factory.addStep(steps.ShellCommand(name='fsck results', command=['os
 update_repo_factory.addStep(steps.ShellCommand(name='sign commits',
                                                command=['flatpak', 'build-sign'] + gpg_args +  ['repo']))
 update_repo_factory.addStep(steps.ShellCommand(name='rsync objects and deltas',
-                                               command=['rsync', '-rlptv', '--ignore-existing',
+                                               command=['rsync', '-rltv', '--ignore-existing',
                                                         '--include=/objects',
                                                         '--include=/objects/**',
                                                         '--include=/deltas',
@@ -279,7 +279,7 @@ update_repo_factory.addStep(steps.ShellCommand(name='rsync objects and deltas',
 update_repo_factory.addStep(steps.ShellCommand(name='syncfs',
                                                command=['sync']))
 update_repo_factory.addStep(steps.ShellCommand(name='rsync refs',
-                                               command=['rsync', '-rlptv',
+                                               command=['rsync', '-rltv',
                                                         '--include=/refs',
                                                         '--include=/refs/heads',
                                                         '--include=/refs/heads/app',
