No need to rebuild deltas in the regular repo updates
These are created in the per-app build.

--- a/master.cfg
+++ b/master.cfg
@@ -290,7 +290,7 @@ update_repo_factory.addStep(steps.ShellCommand(name='rsync refs',
                                                         'repo/', flathub_upstream_repo_path + '/'],
                                                locks=[repo_lock.access('exclusive')]))
 update_repo_factory.addStep(steps.ShellCommand(name='update the repo',
-                                               command=['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path],
+                                               command=['flatpak', 'build-update-repo'] + gpg_args + [flathub_upstream_repo_path],
                                                locks=[repo_lock.access('exclusive')]))
 
 checkin_factory = util.BuildFactory()
