Break out admin password to config

--- a/master.cfg
+++ b/master.cfg
@@ -12,19 +12,19 @@ import subprocess, re, json
 f = open('config.json', 'r')
 config = json.loads(f.read ())
 
-flathub_github_uri = config[u'github-uri'].encode('ascii', 'ignore')
-flathub_buildbot_uri = config[u'buildbot-uri'].encode('ascii', 'ignore')
-flathub_upstream_repo = config[u'flathub-repo'].encode('ascii', 'ignore')
-flathub_upstream_repo_path = config[u'flathub-repo-path'].encode('ascii', 'ignore')
-flathub_branch = config[u'flathub-branch'].encode('ascii', 'ignore')
+def getConfig(name, default=""):
+    if config.has_key(name):
+        return config[name].encode('ascii', 'ignore')
+    return default
 
-flathub_gpg_homedir = ""
-if config.has_key(u'flathub-gpg-homedir'):
-    flathub_gpg_homedir = config[u'flathub-gpg-homedir'].encode('ascii', 'ignore')
-
-flathub_gpg_key = ""
-if config.has_key(u'flathub-gpg-key'):
-    flathub_gpg_key = config[u'flathub-gpg-key'].encode('ascii', 'ignore')
+flathub_github_uri = getConfig('github-uri')
+flathub_buildbot_uri = getConfig('buildbot-uri')
+flathub_upstream_repo = getConfig('flathub-repo')
+flathub_upstream_repo_path = getConfig('flathub-repo-path')
+flathub_branch = getConfig('flathub-branch')
+flathub_gpg_homedir = getConfig('flathub-gpg-homedir')
+flathub_gpg_key = getConfig('flathub-gpg-key')
+flathub_admin_password = getConfig('admin-password')
 
 f = open('builders.json', 'r')
 worker_config = json.loads(f.read ())
@@ -38,7 +38,10 @@ c['protocols'] = {}
 ####### Authentication
 
 # TODO: Switch to github auth
-auth = util.UserPasswordAuth({"flathub@flatpak.org": "test"})
+auth = None
+if flathub_admin_password != '':
+    auth = util.UserPasswordAuth({"admin": flathub_admin_password})
+
 authz = util.Authz(
     allowRules=[
         util.RebuildBuildEndpointMatcher(role="admins", defaultDeny=True),
@@ -47,7 +50,7 @@ authz = util.Authz(
         util.EnableSchedulerEndpointMatcher(role="admins", defaultDeny=True)
     ],
     roleMatchers=[
-        util.RolesFromEmails(admins=["flathub@flatpak.org"]),
+        util.RolesFromEmails(admins=["admin"]),
     ]
 )
 
@@ -352,8 +355,9 @@ c['buildbotURL'] = flathub_buildbot_uri
 
 c['www'] = dict(port=8010,
                 plugins=dict(waterfall_view={}, console_view={}),
-                auth=auth,
                 authz=authz)
+if auth:
+    c['www']['auth'] = auth
 
 ####### DB URL
 
