--- a/config.json.sample
+++ b/config.json.sample
@@ -5,5 +5,6 @@
     "flathub-repo-path": "/vcs/gnome/flathub/repo",
     "flathub-branch": "stable",
     "flathub-gpg-homedir": "/vcs/gnome/flathub/gpg",
-    "flathub-gpg-key": "01DA958A7DC283BF1D3D208CF154092B3A7124D7"
+    "flathub-gpg-key": "01DA958A7DC283BF1D3D208CF154092B3A7124D7",
+    "admin-password": "test"
 }
