--- a/master.cfg
+++ b/master.cfg
@@ -17,6 +17,14 @@ def getConfig(name, default=""):
         return config[name].encode('ascii', 'ignore')
     return default
 
+def getConfigv(name, default=[]):
+    if config.has_key(name):
+        res = []
+        for i in config[name]:
+            res.append(i.encode('ascii', 'ignore'))
+        return res
+    return default
+
 flathub_github_uri = getConfig('github-uri')
 flathub_buildbot_uri = getConfig('buildbot-uri')
 flathub_upstream_repo = getConfig('flathub-repo')
@@ -25,6 +33,9 @@ flathub_branch = getConfig('flathub-branch')
 flathub_gpg_homedir = getConfig('flathub-gpg-homedir')
 flathub_gpg_key = getConfig('flathub-gpg-key')
 flathub_admin_password = getConfig('admin-password')
+flathub_github_auth_client = getConfig('github-auth-client')
+flathub_github_auth_secret = getConfig('github-auth-secret')
+flathub_github_auth_admin_emails = getConfigv('github-auth-emails')
 
 f = open('builders.json', 'r')
 worker_config = json.loads(f.read ())
@@ -37,10 +48,16 @@ c['protocols'] = {}
 
 ####### Authentication
 
-# TODO: Switch to github auth
 auth = None
+roleMatchers=[]
+
 if flathub_admin_password != '':
     auth = util.UserPasswordAuth({"admin": flathub_admin_password})
+    roleMatchers.append(util.RolesFromEmails(admins=["admin"]))
+
+if flathub_github_auth_client != '':
+    auth = il.GitHubAuth(flathub_github_auth_client, flathub_github_auth_secret)
+    roleMatchers.append(util.RolesFromEmails(admins=flathub_github_auth_admin_emails))
 
 authz = util.Authz(
     allowRules=[
@@ -49,9 +66,7 @@ authz = util.Authz(
         util.ForceBuildEndpointMatcher(role="admins", defaultDeny=True),
         util.EnableSchedulerEndpointMatcher(role="admins", defaultDeny=True)
     ],
-    roleMatchers=[
-        util.RolesFromEmails(admins=["admin"]),
-    ]
+    roleMatchers=roleMatchers
 )
 
 ###### Debug stuff
