--- a/master.cfg
+++ b/master.cfg
@@ -56,7 +56,7 @@ if flathub_admin_password != '':
     roleMatchers.append(util.RolesFromEmails(admins=["admin"]))
 
 if flathub_github_auth_client != '':
-    auth = il.GitHubAuth(flathub_github_auth_client, flathub_github_auth_secret)
+    auth = util.GitHubAuth(flathub_github_auth_client, flathub_github_auth_secret)
     roleMatchers.append(util.RolesFromEmails(admins=flathub_github_auth_admin_emails))
 
 authz = util.Authz(
