Add github change source support

--- a/master.cfg
+++ b/master.cfg
@@ -36,6 +36,7 @@ flathub_admin_password = getConfig('admin-password')
 flathub_github_auth_client = getConfig('github-auth-client')
 flathub_github_auth_secret = getConfig('github-auth-secret')
 flathub_github_auth_admin_emails = getConfigv('github-auth-emails')
+flathub_github_change_secret = getConfig('github-change-secret')
 
 f = open('builders.json', 'r')
 worker_config = json.loads(f.read ())
@@ -69,12 +70,7 @@ authz = util.Authz(
     roleMatchers=roleMatchers
 )
 
-###### Debug stuff
-
-# TODO: Remove when not debugging
 c['protocols']['pb'] = {'port': 9989}
-from buildbot.changes import pb
-c['change_source'].append(pb.PBChangeSource(port=9999, user='change', passwd='test'))
 
 ####### SETUP
 
@@ -112,18 +108,6 @@ for w in worker_config.iterkeys():
         flathub_checkin_workers.append(w)
     if wc.has_key(u'update-repo'):
         flathub_update_workers.append(w)
-
-
-####### CHANGESOURCES
-
-# the 'change_source' setting tells the buildmaster how it should find out
-# about source code changes.  Here we point to the buildbot clone of pyflakes.
-
-c['change_source'].append(changes.GitPoller(
-    flathub_github_uri,
-    workdir='gitpoller-workdir', branches=True,
-    pollinterval=300))
-
 
 
 ####### SCHEDULERS
@@ -373,6 +357,24 @@ c['www'] = dict(port=8010,
                 authz=authz)
 if auth:
     c['www']['auth'] = auth
+
+####### CHANGESOURCES
+
+# the 'change_source' setting tells the buildmaster how it should find out
+# about source code changes.  Here we point to the buildbot clone of pyflakes.
+
+if flathub_github_change_secret != "":
+    c['www']['change_hook_dialects'] = {
+        'github': {
+            'secret': flathub_github_change_secret,
+            'strict': True
+        }
+    }
+else:
+    c['change_source'].append(changes.GitPoller(
+        flathub_github_uri,
+        workdir='gitpoller-workdir', branches=True,
+        pollinterval=300))
 
 ####### DB URL
 
