--- a/config.json.sample
+++ b/config.json.sample
@@ -7,5 +7,6 @@
     "flathub-gpg-homedir": "/vcs/gnome/flathub/gpg",
     "flathub-gpg-key": "01DA958A7DC283BF1D3D208CF154092B3A7124D7",
     "admin-password": "test",
-    "github-auth-emails": ["alexander.larsson@gmail.com"]
+    "github-auth-emails": ["alexander.larsson@gmail.com"],
+    "github-change-secret": ""
 }
