Add github status integration

--- a/master.cfg
+++ b/master.cfg
@@ -37,6 +37,7 @@ flathub_github_auth_client = getConfig('github-auth-client')
 flathub_github_auth_secret = getConfig('github-auth-secret')
 flathub_github_auth_admin_emails = getConfigv('github-auth-emails')
 flathub_github_change_secret = getConfig('github-change-secret')
+flathub_github_status_token = getConfig('github-status-token')
 
 f = open('builders.json', 'r')
 worker_config = json.loads(f.read ())
@@ -336,6 +337,12 @@ c['builders'].append(
 # has a variety to choose from, like IRC bots.
 
 c['services'] = []
+
+if flathub_github_status_token != '':
+    c['services'].append(reporters.GitHubStatusPush(token=flathub_github_status_token,
+                                                    context=Interpolate("buildbot/%(prop:buildername)s"),
+                                                    startDescription='Build started.',
+                                                    endDescription='Build done.'))
 
 ####### PROJECT IDENTITY
 
