Its util.Interpolate

--- a/master.cfg
+++ b/master.cfg
@@ -340,7 +340,7 @@ c['services'] = []
 
 if flathub_github_status_token != '':
     c['services'].append(reporters.GitHubStatusPush(token=flathub_github_status_token,
-                                                    context=Interpolate("buildbot/%(prop:buildername)s"),
+                                                    context=util.Interpolate("buildbot/%(prop:buildername)s"),
                                                     startDescription='Build started.',
                                                     endDescription='Build done.'))
 
