Remove tar balls once extracted

--- a/master.cfg
+++ b/master.cfg
@@ -262,6 +262,8 @@ for arch in flathub_arches:
                                                    blocksize=64*1024))
     update_repo_factory.addStep(steps.ShellCommand(name='extract ' + arch + ' build result',
                                                    command=['tar', 'xf', arch+'-repo.tar']))
+    update_repo_factory.addStep(steps.ShellCommand(name='remove ' + arch + ' build result archive',
+                                                   command=['rm', arch+'-repo.tar']))
 update_repo_factory.addStep(steps.MasterShellCommand(name='remove build results from master',
                                                      command=['rm', '-rf', util.Interpolate('builds/%(prop:branch)s-%(prop:revision)s')],
                                                      alwaysRun=True))
