Ensure all final files are readable

--- a/master.cfg
+++ b/master.cfg
@@ -267,6 +267,7 @@ for arch in flathub_arches:
 update_repo_factory.addStep(steps.MasterShellCommand(name='remove build results from master',
                                                      command=['rm', '-rf', util.Interpolate('builds/%(prop:branch)s-%(prop:revision)s')],
                                                      alwaysRun=True))
+update_repo_factory.addStep(steps.ShellCommand(name='Ensure files are readable', command=['chmod', '-R', 'a+rX', 'repo']))
 update_repo_factory.addStep(steps.ShellCommand(name='fsck results', command=['ostree', '--repo=repo', 'fsck']))
 update_repo_factory.addStep(steps.ShellCommand(name='sign commits',
                                                command=['flatpak', 'build-sign'] + gpg_args +  ['repo']))
