Move delta generation to update-repo
We need to have the commits signed before we build the deltas.
Otherwise the commitmeta files will not be in the deltas.

--- a/master.cfg
+++ b/master.cfg
@@ -237,9 +237,6 @@ build_factory.addStep(steps.ShellCommand(name='build manifest',
 build_factory.addStep(steps.ShellCommand(name='check that the right branch was built',
                                          haltOnFailure=True,
                                          command=['stat', util.Interpolate('repo/refs/heads/app/%(prop:branch)s/%(prop:arch)s/' + flathub_branch)]))
-build_factory.addStep(steps.ShellCommand(name='generating deltas',
-                                         haltOnFailure=True,
-                                         command=['flatpak', 'build-update-repo', '--generate-static-deltas', 'repo']))
 build_factory.addStep(steps.ShellCommand(name='unset core.parent',
                                          command=['ostree', '--repo=repo', 'config', 'set', 'core.parent', '']))
 build_factory.addStep(steps.ShellCommand(name='packaging result',
@@ -267,10 +264,13 @@ for arch in flathub_arches:
 update_repo_factory.addStep(steps.MasterShellCommand(name='remove build results from master',
                                                      command=['rm', '-rf', util.Interpolate('builds/%(prop:branch)s-%(prop:revision)s')],
                                                      alwaysRun=True))
-update_repo_factory.addStep(steps.ShellCommand(name='Ensure files are readable', command=['chmod', '-R', 'a+rX', 'repo']))
 update_repo_factory.addStep(steps.ShellCommand(name='fsck results', command=['ostree', '--repo=repo', 'fsck']))
 update_repo_factory.addStep(steps.ShellCommand(name='sign commits',
                                                command=['flatpak', 'build-sign'] + gpg_args +  ['repo']))
+update_repo_factory.addStep(steps.ShellCommand(name='generating deltas',
+                                               haltOnFailure=True,
+                                               command=['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + ['repo']))
+update_repo_factory.addStep(steps.ShellCommand(name='Ensure files are readable', command=['chmod', '-R', 'a+rX', 'repo']))
 update_repo_factory.addStep(steps.ShellCommand(name='rsync objects and deltas',
                                                command=['rsync', '-rltv', '--ignore-existing',
                                                         '--include=/objects',
