Don't do github commit status for checkin

--- a/master.cfg
+++ b/master.cfg
@@ -314,16 +314,20 @@ checkin_factory.addStep(steps.Trigger(name='Update repository',
 
 c['builders'] = []
 
+status_builders = []
+
 for arch in flathub_arches:
     c['builders'].append(
         util.BuilderConfig(name='build-' + arch,
                            workernames=flathub_arch_workers[arch],
                            properties={'arch': arch},
                            factory=build_factory))
+    status_builders.append('build-' + arch)
 c['builders'].append(
     util.BuilderConfig(name='update-repo',
                        workernames=flathub_update_workers,
                        factory=update_repo_factory))
+status_builders.append('update-repo')
 c['builders'].append(
     util.BuilderConfig(name='checkin',
                        collapseRequests=True,
@@ -342,7 +346,8 @@ if flathub_github_status_token != '':
     c['services'].append(reporters.GitHubStatusPush(token=flathub_github_status_token,
                                                     context=util.Interpolate("buildbot/%(prop:buildername)s"),
                                                     startDescription='Build started.',
-                                                    endDescription='Build done.'))
+                                                    endDescription='Build done.',
+                                                    builders=status_builders))
 
 ####### PROJECT IDENTITY
 
